--- a/Blazor/BlazorSample/ClientSideBlazor/Shared/NavMenu.razor
+++ b/Blazor/BlazorSample/ClientSideBlazor/Shared/NavMenu.razor
@@ -22,6 +22,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="bookslist">
+                <span class="oi oi-book" aria-hidden="true"></span> Show books
+            </NavLink>
+        </li>
     </ul>
 </div>
 
